Fixed dplyr header

--- a/summary-example.html
+++ b/summary-example.html
@@ -1054,7 +1054,7 @@ N is the number of non-missing value. <sup>1</sup>Kruskal-Wallis. <sup>2</sup>Pe
   summarise(Mean=mean(Petal.Length),
             Median=median(Petal.Length),
             SD=round(sd(Petal.Length),3) ) %&gt;%
-  tangram(&quot;iris3&quot;, caption=&quot;Petal Length (dplyr example)&quot;, style=&quot;nejm&quot;, id=&quot;iris3&quot;)</code></pre>
+  tangram(&quot;iris3&quot;, caption=&quot;Petal Length (dplyr example)&quot;, style=&quot;nejm&quot;)</code></pre>
 <div id="iris3" class="figure">
 <style>
     #iris3 body .figbody {
@@ -1144,16 +1144,16 @@ Petal Length (dplyr example)
 <thead>
 <tr>
 <th class="header tg-label">
-<span class="variable">iris3</span>
+<span class="variable">Species</span>
 </th>
 <th class="header tg-label">
-<span class="variable"></span>
+<span class="variable">Mean</span>
 </th>
 <th class="header tg-label">
-<span class="variable"></span>
+<span class="variable">Median</span>
 </th>
 <th class="header tg-label">
-<span class="variable"></span>
+<span class="variable">SD</span>
 </th>
 </tr>
 </thead>
